# SynGenLoss

./: .gitignore  README.md  development.ipynb  div_testing.ipynb  pyproject.toml  setup.cfg  testing.ipynb
Figures/: Thumbs.db
SynGenLoss/: __init__.py  utils.py
SynGenLoss/Examples/: getting_started.ipynb
SynGenLoss/Model1/: Gen160MVA.py  GenSynMachineLosses.py  __init__.py  aabjora_model.py
SynGenLoss/Model1/components/: GenSaturationModel_v1.py
SynGenLoss/Model2/: GenDataClass.py  GenSynMachineLosses.py  __init__.py  aabjora_model.py  readme.md
SynGenLoss/Model2/components/: GenSaturationModel_v1.py
SynGenLoss/Model3/: GenSynMachineLosses.py  readme.md
SynGenLoss/components/: GenConstantLossModel_v1.py
SynGenLoss_v2/: __init__.py  utils.py
SynGenLoss_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SynGenLoss_v2/Examples/: getting_started.ipynb
SynGenLoss_v2/Model1/: CapDiag.py  CapDiag_plant.py  CapDiag_trafo.py  DataClasses.py  Gen160MVA.py  GenDataClass.py  ModelClasses.py  PowerPlant.py  __init__.py  aabjora_model.py
SynGenLoss_v2/Model1/not_in_use/: CapDiag_plant.py  CapDiag_trafo.py
