[metadata]
name = SynGenLoss
version = 0.1
author = Emil G. Melfald 
author_email = Emil.G.Melfald@usn.no 
description = A Python module for calculating power losses in a synchronous machine. 
long_description = file: README.md 
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License 
    Operating System :: OS Independent 

[options] 
packages = find: 
python_requires = >=3.8
includes_package_data = True 